[package]
name = "rucopy"
version = "0.1.0"
authors = ["Adam Gutglick <adamgsal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
rusoto_core = "0.41.0"
rusoto_s3 = "0.41.0"
clap = "2.33.0"
xmltree = "0.8.0"
rayon="1.2.0"
crossbeam = "0.7"
crossbeam-utils = "0.6.6"
