[package]
name = "rucopy"
version = "0.1.0"
authors = ["Adam Gutglick <adamgsal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.43.0"
rusoto_s3 = "0.43.0"
clap = "2.33.0"
tokio = { version = "0.2.16", features = ["full"] }
rayon = "1.3"
